--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,6 +20,6 @@
              "codespace.md"
          ]
      }
- }
-  https://github.com/Avila-Princy-M01/skills-code-with-codespaces?tab=readme-ov-file
+ } ,
+ "postCreateCommand": "echo '# Writing code upon codespace creation!'  >> codespace.md"
 }
